# capacitated-vehicle-routing-problem

./: .gitattributes  .gitignore  ANALYSIS.md  README.md  build-reports.ps1  format.ps1  start.ps1  stop.ps1  sync_cluster.ps1
backend/: format_latex.py  format_latex_comparison.py  format_latex_table.py  main.py  plot_convergence.py  pyproject.toml  run_experiments.py  test_minimal.py  test_quick.py  tune_parameters.py
backend/cvrp/: __init__.py  hga.py  instance.py  numba_utils.py  utils.py
backend/results/: table_comparison.txt
cluster/: aliases.sh  clean.sh  run.sh  setup.sh  tune.sh
config/: config.yaml  config_balanced.yaml  config_explore.yaml  config_fast.yaml  config_large.yaml  config_medium.yaml  config_optuna.yaml  config_small.yaml  config_tuned.yaml  config_ultra.yaml
docs/: cvrp.md  operatori-e-motivazione-hga.md
docs/report/: references.bib  report.tex
docs/report-compact/: report.tex
docs/report-compact/parts/: algoritmo.tex  conclusioni.tex  introduzione.tex  protocollo.tex  risultati.tex
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  types.ts  utils.ts
results/: results.json  table_comparison.txt
results/config_balanced/: results.json  table.txt
results/config_explore/: results.json  table.txt
results/config_fast/: table.txt
results/config_large/: results.json  table.txt
results/config_medium/: results.json  table.txt
results/config_small/: results.json  table.txt
results/config_tuned/: results.json  table.txt
results/config_ultra/: results.json
(+13 files in other folders)
