[project]
name = "cvrp-solver"
version = "0.1.0"
description = "Capacitated Vehicle Routing Problem solver using Hybrid Genetic Algorithm"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
]

[project.scripts]
cvrp-server = "main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402"]
